[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.27.1",
    "httpx==0.27.0",
    "pydantic==2.6.3",
    "tenacity==8.2.3",
    "pydantic-settings>=2.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    ".vscode",
    "*.txt"
]
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
[tool.ruff.lint.per-file-ignores]
"*" = ["F841"]
