[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.27.1",
    "pydantic==2.13.4",
    "tenacity==8.2.3",
    "pydantic-settings>=2.2.1",
    "httpx2>=2.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.ruff]
line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    ".vscode",
    "*.txt"
]
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
[tool.ruff.lint.per-file-ignores]
"*" = ["F841"]
